[tool.poetry]
name = "geckoleech"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyjsonq = "^1.0.2"
duckdb = "^0.3.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-mock = "^3.6.1"
pycoingecko = "^2.2.0"

[tool.poetry.scripts]
gecko = "geckoleech.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Repo" = "https://github.com/dabac76/geckoleech"